# registry

./: .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  SECURITY.md  build.sh  mcp_schema.json  pyproject.toml  schema.json  wrangler.jsonc
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: security_issue.yaml
.github/workflows/: check-mcp-tools.yaml  check-remote-urls.yaml  deploy-json.yaml  deploy-mcp-json.yaml  validate-schema.yaml
deploy/: index.js
servers/AIVA/: mcp.json  meta.yaml
servers/Augmented-Nature-BioThings-MCP-Server/: meta.yaml
servers/ChristianHinge-dicom-mcp/: meta.yaml
servers/EBIBioStudies-biostudies-mcp-server/: meta.yaml
servers/EBISPOT-ols4/: mcp.json  meta.yaml
servers/JackKuo666-ChEMBL-MCP-Server/: meta.yaml
servers/JackKuo666-Google-Scholar-MCP-Server/: meta.yaml
servers/JackKuo666-PubChem-MCP-Server/: meta.yaml
servers/MaxMLang-cxg-census-mcp/: mcp.json  meta.yaml
servers/Nexgene-Research-nexonco-mcp/: mcp.json
servers/OHNLP-omop_mcp/: meta.yaml
servers/PDBeurope-PDBe-MCP-Servers/: mcp.json  meta.yaml
servers/RNAcentral-rnacentral-mcp-server/: mcp.json  meta.yaml
servers/TakumiY235-uniprot-mcp-server/: meta.yaml
servers/Thiosemicarbazide222-just-chat-chemistry/: meta.yaml
servers/ToxMCP-toxmcp/: meta.yaml
servers/VEPmcp/: meta.yaml
servers/YosefLab-scvi-tools-mcp/: mcp.json  meta.yaml
servers/aact-mcp/: meta.yaml
servers/armish-hgnc.mcp/: meta.yaml
servers/augmented-nature-biothings-mcp-server/: meta.yaml
servers/augmented-nature-reactome-mcp/: meta.yaml
(+115 files in other folders)
